<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".Fragmentos.FragmentCuenta">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/Txt_perfil"
            android:text="@string/Txt_perfil"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/Iv_perfil"
            android:layout_below="@+id/Txt_perfil"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/img_perfil"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/Txt_informacion"
            android:text="@string/Txt_informacion"
            android:layout_below="@+id/Iv_perfil"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Nombres-->
        <TextView
            android:id="@+id/Txt_nombres"
            android:text="@string/Txt_nombres"
            android:layout_below="@id/Txt_informacion"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_nombres"
            android:text="@string/Tv_nombres"
            android:layout_below="@+id/Txt_informacion"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Email-->
        <TextView
            android:id="@+id/Txt_email"
            android:text="@string/Txt_email"
            android:layout_below="@id/Txt_nombres"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_email"
            android:text="@string/Tv_email"
            android:layout_below="@+id/Txt_nombres"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Fecha de nac-->
        <TextView
            android:id="@+id/Txt_nacimiento"
            android:text="@string/Txt_nacimiento"
            android:layout_below="@id/Txt_email"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_nacimiento"
            android:text="@string/Tv_nacimiento"
            android:layout_below="@+id/Txt_email"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Miembro desde-->
        <TextView
            android:id="@+id/Txt_miembro"
            android:text="@string/Txt_miembro"
            android:layout_below="@id/Txt_nacimiento"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_miembro"
            android:text="@string/Tv_miembro"
            android:layout_below="@+id/Txt_nacimiento"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <!--Teléfono-->
        <TextView
            android:id="@+id/Txt_telefono"
            android:text="@string/Txt_telefono"
            android:layout_below="@id/Txt_miembro"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_telefono"
            android:text="@string/Tv_telefono"
            android:layout_below="@+id/Txt_miembro"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <!--Estado de la cuenta-->
        <TextView
            android:id="@+id/Txt_estado_cuenta"
            android:text="@string/Txt_estado_cuenta"
            android:layout_below="@id/Txt_telefono"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_estado_cuenta"
            android:text="@string/Tv_estado_cuenta"
            android:layout_below="@+id/Txt_telefono"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/TxtOpciones"
            android:text="@string/TxtOpciones"
            android:layout_below="@id/Txt_estado_cuenta"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Editar perfil-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_editar_perfil"
            android:layout_width="220dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_below="@+id/TxtOpciones"
            android:layout_centerInParent="true"
            android:text="@string/Btn_editar_perfil"
            android:textAllCaps="true"
            app:icon="@drawable/ic_editar" />

        <!--Cambiar password-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_cambiar_pass"
            android:layout_width="220dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_below="@+id/Btn_editar_perfil"
            android:layout_centerInParent="true"
            android:text="@string/Btn_cambiar_pass"
            android:textAllCaps="true"
            app:icon="@drawable/ic_password" />

        <!--Verificar cuenta-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_verificar_cuenta"
            android:layout_width="220dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_below="@+id/Btn_cambiar_pass"
            android:layout_centerInParent="true"
            android:text="@string/Btn_verificar_cuenta"
            android:textAllCaps="true"
            app:icon="@drawable/ic_verificar" />

        <!--Eliminar todos mis anuncios-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_eliminar_anuncios"
            android:text="@string/Btn_eliminar_anuncios"
            android:layout_below="@+id/Btn_verificar_cuenta"
            android:layout_centerInParent="true"
            android:textAllCaps="true"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_eliminar_anuncios"/>

        <!--Eliminar cuenta -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_eliminar_cuenta"
            android:text="@string/Btn_eliminar_cuenta"
            android:layout_below="@+id/Btn_eliminar_anuncios"
            android:layout_centerInParent="true"
            android:textAllCaps="true"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_eliminar_cuenta"/>



        <!--Cerrar sesión-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_cerrar_sesion"
            android:layout_width="220dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_below="@+id/Btn_eliminar_cuenta"
            android:layout_centerInParent="true"
            android:text="@string/Btn_cerrar_sesion"
            android:textAllCaps="true"
            app:icon="@drawable/ic_salir" />


    </RelativeLayout>



</ScrollView>